Fix relative file locations in HTML export

This was another problem relative to the KURL->QUrl transition dealing
with relative urls and invalid links.

Add another unit test for the HTML export to verify appropriate relative
links, including checkmark pics and image files.

BUG: 376134
FIXED-IN: 3.0.1