src/tests/htmlexportertest.cpp
@@ -30,11 +30,14 @@
 #include "../collections/bookcollection.h"
 #include "../collectionfactory.h"
 #include "../entry.h"
+#include "../document.h"
 #include "../images/imagefactory.h"
 #include "../utils/datafileregistry.h"
+#include "../core/tellico_config.h"
 
-#include <QRegExp>
 #include <QTest>
+#include <QRegExp>
+#include <QTemporaryDir>
 
 QTEST_GUILESS_MAIN( HtmlExporterTest )
 
@@ -46,6 +49,55 @@ void HtmlExporterTest::initTestCase() {
 }
 
 void HtmlExporterTest::testHtml() {
+  Tellico::Config::setImageLocation(Tellico::Config::ImagesInLocalDir);
+  // the default collection will use a temporary directory as a local image dir
+  QVERIFY(!Tellico::ImageFactory::localDir().isEmpty());
+
+  QString tempDirName;
+  QTemporaryDir tempDir;
+  QVERIFY(tempDir.isValid());
+  tempDir.setAutoRemove(true);
+  tempDirName = tempDir.path();
+  QString fileName = tempDirName + "/with-image.tc";
+  QString imageDirName = tempDirName + "/with-image_files/";
+
+  // copy a collection file that includes an image into the temporary directory
+  QVERIFY(QFile::copy(QFINDTESTDATA("data/with-image.tc"), fileName));
+
+  Tellico::Data::Document* doc = Tellico::Data::Document::self();
+  QVERIFY(doc->openDocument(QUrl::fromLocalFile(fileName)));
+  QCOMPARE(Tellico::ImageFactory::localDir(), imageDirName);
+  // save the document, so the images get copied out of the .tc file into the local image directory
+  QVERIFY(doc->saveDocument(QUrl::fromLocalFile(fileName)));
+
+  Tellico::Data::CollPtr coll = doc->collection();
+  QVERIFY(coll);
+
+  Tellico::Export::HTMLExporter exp(coll);
+  exp.setEntries(coll->entries());
+  exp.setExportEntryFiles(true);
+  exp.setColumns(QStringList() << QLatin1String("Title") << QLatin1String("Gift")
+                               << QLatin1String("Rating") << QLatin1String("Front Cover"));
+  exp.setURL(QUrl::fromLocalFile(tempDirName + "/testHtml.html"));
+
+  QString output = exp.text();
+  QVERIFY(!output.isEmpty());
+
+  // verify the relative location of the tellico2html.js file
+  QVERIFY(output.contains(QLatin1String("src=\"testHtml_files/tellico2html.js")));
+  // verify relative location of image pics
+  QVERIFY(output.contains(QLatin1String("src=\"testHtml_files/pics/checkmark.png")));
+  // verify relative location of entry link
+  QVERIFY(output.contains(QLatin1String("href=\"testHtml_files/Catching_Fire__The_Second_Book_of_the_Hunger_Games_-1.html")));
+  // verify relative location of image file
+  QVERIFY(output.contains(QLatin1String("src=\"testHtml_files/17b54b2a742c6d342a75f122d615a793.jpeg")));
+
+  // sanity check, the directory should not exists after QTemporaryDir destruction
+  tempDir.remove();
+  QVERIFY(!QDir(tempDirName).exists());
+}
+
+void HtmlExporterTest::testHtmlTitle() {
   Tellico::Data::CollPtr coll(new Tellico::Data::BookCollection(true));
   coll->setTitle(QLatin1String("Robby's Books"));
 
@@ -86,4 +138,17 @@ void HtmlExporterTest::testReportHtml() {
   rx.setMinimal(true);
   QVERIFY(output.contains(rx));
   QCOMPARE(rx.cap(1), QLocale().toString(QDate::currentDate()));
+}
+
+void HtmlExporterTest::testDirectoryNames() {
+  Tellico::Data::CollPtr coll(new Tellico::Data::BookCollection(true));
+  Tellico::Export::HTMLExporter exp(coll);
+
+  exp.setURL(QUrl::fromLocalFile(QDir::homePath() + QLatin1String("/test.html")));
+  QCOMPARE(exp.fileDir(), QUrl::fromLocalFile(QDir::homePath() + QLatin1String("/test_files/")));
+  QCOMPARE(exp.fileDirName(), QLatin1String("test_files/"));
+
+  // setCollectionUrl used when exporting entry files only
+  exp.setCollectionURL(QUrl::fromLocalFile(QDir::homePath()));
+  QCOMPARE(exp.fileDirName(), QLatin1String("/"));
 }
